# Appi-Claw

./: .gitignore  CONTRIBUTING.md  README.md  SKILL.md  cli.py  config.example.json  openclaw.plugin.json  pyproject.toml  requirements.txt
appi_claw/: __init__.py  cli.py  config.py  dashboard.py  documents.py  draft_gen.py  form_handler.py  logger.py  setup.py  sheets.py  situation_handler.py  telegram_bot.py
appi_claw/integrations/: __init__.py  openclaw_bridge.py
appi_claw/openclaw/: __init__.py  plugin.py
